--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@ function drawTxt(){
 				imgExt=".jpg";
 			}
 			else{
-				imgExt=".png";
+				imgExt=".PNG";
 			}
 			imgLoc+=imgExt;
 			img.onload=function(){
