--- a/index.html
+++ b/index.html
@@ -56,8 +56,11 @@ function drawTxt(){
 			ctx.fillRect(0,0,canvas.width,canvas.height);
 			var img= new Image;
 			imgLoc="My_Girl/img"+x;
-			if(x==1 || x== 5 || x== 23 || x==51 || x==52 || x==53 || x==54 || x==55 || x==56 || x==57){
+			if(x==1){
 				imgExt=".jpg";
+			}
+			else if (x== 5 || x== 23 || x==51 || x==52 || x==53 || x==54 || x==55 || x==56 || x==57){
+				imgExt=".JPG";
 			}
 			else{
 				imgExt=".PNG";
