--- a/index.html
+++ b/index.html
@@ -56,10 +56,10 @@ function drawTxt(){
 			ctx.fillRect(0,0,canvas.width,canvas.height);
 			var img= new Image;
 			imgLoc="My_Girl/img"+x;
-			if(x==1){
+			if(x==1 || x==56 || x==57){
 				imgExt=".jpg";
 			}
-			else if (x== 5 || x== 23 || x==51 || x==52 || x==53 || x==54 || x==55 || x==56 || x==57){
+			else if (x== 5 || x== 23 || x==51 || x==52 || x==53 || x==54 || x==55 ){
 				imgExt=".JPG";
 			}
 			else{
