--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@ function playVideos(){
 	var vid5= document.createElement("VIDEO");
 	var vid6= document.createElement("VIDEO");
 	var vid7= document.createElement("VIDEO");
-	vid1.setAttribute("src","4ashley/combined.mp4");
+	vid1.setAttribute("src","4ashley/combined2.mp4");
 	ctx.fillStyle='black';
 	ctx.fillRect(0,0,canvas.width,canvas.height);
 	audio.pause();
